# simplegame

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.c  game  game.c  main.cpp
command/: command_parser.cpp  command_parser.hpp
core/: buffer.cpp  buffer.hpp  editor.cpp  editor.hpp
modes/: mode_handler.cpp  mode_handler.hpp
plugin/: plugin_manager.cpp  plugin_manager.hpp
syntax/: highlighter.cpp  highlighter.hpp
ui/: opengl_screen.cpp  opengl_screen.hpp  screen.hpp
util/: logger.cpp  logger.hpp
